refactor: 변경되지 않아야하는 리스트이므로 List.of 메소드 사용